[gd_scene load_steps=26 format=3 uid="uid://b1tom3lko7gjj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_8t4nh"]
[ext_resource type="Texture2D" uid="uid://c6dwgxf60u7qj" path="res://assets/sprites/standard_tilemap.png" id="1_oenw5"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_phgyx"]
[ext_resource type="Texture2D" uid="uid://bb6xyjjwykkf1" path="res://assets/sprites/Fondo.png" id="2_g42yk"]
[ext_resource type="Texture2D" uid="uid://dj7p2rqw3s24g" path="res://assets/sprites/standard_buildings.png" id="2_qo3u4"]
[ext_resource type="Texture2D" uid="uid://csm03giy6csos" path="res://assets/sprites/personal_tielmap.png" id="4_0yv27"]
[ext_resource type="Script" path="res://scripts/pause.gd" id="4_4261l"]
[ext_resource type="Script" path="res://scripts/day_night_cycle.gd" id="6_bodcb"]
[ext_resource type="Script" path="res://savedGame/save_loader.gd" id="7_6alr0"]
[ext_resource type="Texture2D" uid="uid://bkpc1kjm4t2xn" path="res://assets/daynightcycle-gradient-texture.tres" id="7_g0air"]
[ext_resource type="Texture2D" uid="uid://bexsjgxatiitj" path="res://assets/sprites/outline.png" id="8_j6yto"]
[ext_resource type="PackedScene" uid="uid://j4jtar5evxf4" path="res://scenes/ui/bulding_window.tscn" id="8_r41ji"]
[ext_resource type="Script" path="res://scripts/ui_controller.gd" id="8_s0tum"]
[ext_resource type="Theme" uid="uid://orocpndgjqbk" path="res://scenes/ui/DinoPark.tres" id="10_c8ufq"]
[ext_resource type="Script" path="res://scripts/graf.gd" id="13_qjvc1"]
[ext_resource type="Script" path="res://scenes/Scripanel.gd" id="13_sgbkh"]
[ext_resource type="Script" path="res://scenes/botonE.gd" id="14_syfex"]
[ext_resource type="Script" path="res://scripts/ListC.gd" id="16_j8b5s"]
[ext_resource type="Script" path="res://scripts/ArbolC.gd" id="17_cddlq"]
[ext_resource type="Script" path="res://scripts/Hast.gd" id="19_vbns1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ine23"]
resource_name = "terrain"
texture = ExtResource("1_oenw5")
texture_region_size = Vector2i(256, 144)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -8)
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ddg8"]
resource_name = "buildings"
texture = ExtResource("2_qo3u4")
texture_region_size = Vector2i(256, 144)
0:0/0 = 0
1:0/size_in_atlas = Vector2i(1, 2)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 64)
0:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qp6wo"]
resource_name = "Personal_terrain"
texture = ExtResource("4_0yv27")
texture_region_size = Vector2i(256, 144)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
2:1/0 = 0
3:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_okvup"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(256, 128)
sources/0 = SubResource("TileSetAtlasSource_ine23")
sources/1 = SubResource("TileSetAtlasSource_6ddg8")
sources/3 = SubResource("TileSetAtlasSource_qp6wo")

[sub_resource type="Theme" id="Theme_2pwv4"]

[node name="Game" type="Node2D"]
script = ExtResource("1_phgyx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(567, 242)
scale = Vector2(6, 6)
texture = ExtResource("2_g42yk")

[node name="TileMap" type="TileMap" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
tile_set = SubResource("TileSet_okvup")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(5, 196611, 0, -65531, 131075, 0, 65541, 131075, 0, 4, 196611, 1, 6, 196611, 1, 65542, 131075, 1, -65530, 131075, 1, -65532, 131075, 1, 65540, 131075, 1, 65539, 131075, 1, 3, 131075, 1, -65533, 131075, 1, -65529, 131075, 1, 7, 131075, 1, 65543, 131075, 1, 131078, 131075, 1, 131077, 131075, 1, 131076, 131075, 1, 131075, 131075, 1, 131079, 131075, 1, -131069, 131075, 1, -131068, 131075, 1, -131067, 131075, 1, -131066, 131075, 1, -131065, 131075, 1, -131064, 65539, 0, -196600, 65539, 0, -196601, 65539, 0, -196602, 65539, 0, -196603, 65539, 0, -196604, 65539, 0, -196605, 65539, 0, -196606, 65539, 0, -131070, 65539, 0, -65534, 65539, 0, 2, 65539, 0, 65538, 65539, 0, 131074, 65539, 0, 196610, 65539, 0, 196611, 65539, 0, 196612, 65539, 0, 196613, 65539, 0, 196614, 65539, 0, 196615, 65539, 0, 196616, 65539, 0, 131080, 65539, 0, 65544, 65539, 0, 8, 65539, 0, -65528, 65539, 0)
layer_1/name = "Layer 1"
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 1
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()

[node name="Player" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_8t4nh")

[node name="Camera" type="Camera2D" parent="Player"]
position = Vector2(729, 364)
limit_left = -3060
limit_top = -2615
limit_right = 2680
limit_bottom = 2535
limit_smoothed = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
unique_name_in_owner = true
script = ExtResource("6_bodcb")
gradient = ExtResource("7_g0air")

[node name="Interface" type="CanvasLayer" parent="."]
layer = 2

[node name="UI" type="Control" parent="Interface"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("8_s0tum")

[node name="WIP" type="Label" parent="Interface/UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "v0.1a Work in Progress"

[node name="Branch" type="Label" parent="Interface/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -26.0
offset_right = 169.0
offset_bottom = -3.0
grow_vertical = 0
text = "Main Branch
"

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/UI"]
custom_minimum_size = Vector2(0.975, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -218.0
offset_bottom = 56.0
grow_horizontal = 0
alignment = 1

[node name="Building" type="Button" parent="Interface/UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Toggles building mode "
mouse_filter = 1
theme = ExtResource("10_c8ufq")
toggle_mode = true
action_mode = 0
text = "
Building"

[node name="Window" parent="Interface/UI/HBoxContainer/Building" instance=ExtResource("8_r41ji")]
visible = false

[node name="Mision" type="Button" parent="Interface/UI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("10_c8ufq")
text = "Missions"
script = ExtResource("17_cddlq")

[node name="HBoxContainer2" type="HBoxContainer" parent="Interface/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 7.0
offset_top = 8.0
offset_right = -710.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="DayLabel" type="Label" parent="Interface/UI/HBoxContainer2"]
layout_mode = 2
text = "Day"

[node name="HourLabel" type="Label" parent="Interface/UI/HBoxContainer2"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="Interface/UI/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Interface/UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_j6yto")

[node name="Evolucion" type="Button" parent="Interface/UI"]
visible = false
layout_mode = 0
offset_left = 1284.0
offset_top = 96.0
offset_right = 1372.0
offset_bottom = 129.0
text = "Evolucion 1
dino"
script = ExtResource("14_syfex")

[node name="Panel" type="Panel" parent="Interface/UI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 82.0
offset_top = 46.0
offset_right = 380.0
offset_bottom = 438.0
theme = ExtResource("10_c8ufq")
script = ExtResource("13_sgbkh")

[node name="Mision_container" type="VBoxContainer" parent="Interface/UI/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 297.0
offset_bottom = 348.0
script = ExtResource("17_cddlq")

[node name="Menu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 3

[node name="Pause" type="Control" parent="Menu"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_4261l")

[node name="BlackOverlay" type="ColorRect" parent="Menu/Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.623529, 0.247059, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Pause/BlackOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -83.0
offset_right = 95.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Menu/Pause/BlackOverlay/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_2pwv4")
text = "DinoPark"
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="Menu/Pause/BlackOverlay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Main Menu"

[node name="Save" type="Button" parent="Menu/Pause/BlackOverlay/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="Load" type="Button" parent="Menu/Pause/BlackOverlay/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Exit" type="Button" parent="Menu/Pause/BlackOverlay/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="Utilities" type="Node" parent="."]

[node name="SaveLoader" type="Node" parent="Utilities"]
unique_name_in_owner = true
script = ExtResource("7_6alr0")

[node name="Graph" type="Node" parent="Utilities"]
script = ExtResource("13_qjvc1")

[node name="Clist" type="CustomList" parent="Utilities"]
unique_name_in_owner = true
script = ExtResource("16_j8b5s")

[node name="CArbol" type="CustomTree" parent="Utilities"]
script = ExtResource("17_cddlq")

[node name="THast" type="CustomList" parent="Utilities"]
unique_name_in_owner = true
script = ExtResource("19_vbns1")

[connection signal="mouse_entered" from="Interface/UI/HBoxContainer" to="." method="_on_h_box_container_mouse_entered"]
[connection signal="mouse_exited" from="Interface/UI/HBoxContainer" to="." method="_on_h_box_container_mouse_exited"]
[connection signal="toggled" from="Interface/UI/HBoxContainer/Building" to="." method="_on_building_toggled"]
[connection signal="pressed" from="Interface/UI/HBoxContainer/Mision" to="Interface/UI/Panel" method="_on_mision_pressed"]
[connection signal="pressed" from="Interface/UI/HBoxContainer/Mision" to="Utilities/CArbol" method="_on_mision_pressed"]
[connection signal="ready" from="Interface/UI/Panel" to="Interface/UI/Panel" method="_on_ready"]
[connection signal="pressed" from="Menu/Pause/BlackOverlay/VBoxContainer/MainMenu" to="Menu/Pause" method="_on_main_menu_pressed"]
[connection signal="pressed" from="Menu/Pause/BlackOverlay/VBoxContainer/Save" to="Utilities/SaveLoader" method="save_game"]
[connection signal="pressed" from="Menu/Pause/BlackOverlay/VBoxContainer/Load" to="Utilities/SaveLoader" method="load_game"]
[connection signal="pressed" from="Menu/Pause/BlackOverlay/VBoxContainer/Exit" to="Menu/Pause" method="_on_exit_pressed"]
